--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -20,3 +20,18 @@
 	top: 0;
 }
 
+/*	CONTACTS 	*/
+
+.address-info.contacts-address {
+	position: absolute;
+	left: 900px;
+}
+
+.contacts-h {
+	display: block;
+	text-transform: uppercase;
+	font-family: inherit;
+	font-size: 20px;
+	margin-bottom: 60px;
+	width: 900px;
+}
