Update <address-info> and page "contacts"

--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -22,15 +22,29 @@
 
 /*	CONTACTS 	*/
 
-.address-info.contacts-address {
-	position: absolute;
-	left: 900px;
+.page-contacts-paragraph {
+	border-radius: 5px;
+	background: #ececec;
+	padding: 25px 20px;
+	margin-bottom: 60px;
 }
 
 .contacts-h {
+	text-transform: uppercase;
+	font-size: 20px;
+	margin-bottom: 60px;
+}
+
+.address-content {
+	position: absolute;
+	left: 900px;
+	font-size: 20px;
+}
+
+.form-h {
 	display: block;
 	text-transform: uppercase;
 	font-size: 20px;
 	margin-bottom: 60px;
-	width: 900px;
 }
+
