--- a/src/components/address-info/address-info.css
+++ b/src/components/address-info/address-info.css
@@ -1,13 +1,7 @@
 .address-info {
 	width: 270px;
-	height: 180px;
 	font-size: 16px;
-}
-
-.address-info > .contacts-term {
-	text-transform: uppercase;
-	font-size: 20px;
-	margin-top: 0;
+	font-style: normal;
 }
 
 /*Margin location-info*/
