--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -25,7 +25,7 @@
 .page-contacts-paragraph {
 	border-radius: 5px;
 	background: #ececec;
-	padding: 25px 20px;
+	padding: 11px 20px 5px;
 	margin-bottom: 60px;
 }
 
