add icons, add style and change structure share-bar

--- a/src/components/share-bar/share-bar.css
+++ b/src/components/share-bar/share-bar.css
@@ -1,25 +1,75 @@
 .share-bar {
 	height: 70px;
 	width: 870px;
-	margin: 20px;
-	background: red;
+	background: #ececec;
+	border-radius: 5px;
 }
 
-.share-bar share {
+.share-bar li:first-child {
 	font-family: 'Open Sans';
 	font-size: 14px;
 	text-transform: uppercase;
+	margin-left: -30px;
 }
 
-.button-left {
-	margin-right: 10px;
+.share-bar img {
+	border-radius: 5px;
+}
+
+.share-bar a {
+	text-decoration: none;
+}
+
+.share-bar ul {
+	list-style: none;
+}
+
+.share-bar li {
+	display: inline-block;
+	margin: 5px;
+	overflow: hidden;
+}
+
+.share-bar .button-bar {
+	position: relative;
+	float: right;
+	top: -76px;
+	margin-right: 20px;
+}
+
+.share-bar .button-left {
+	height: 40px;
+	width: 40px;
+	border: none;
+	border-radius: 5px;
+	background: #ccc;
+	background-image: url(./image/left_arrow.png);
+	background-repeat: no-repeat;
+	background-position: 0 0;
+	cursor: pointer;
+}
+
+.share-bar .button-right {
+	height: 40px;
+	width: 40px;
+	border: none;
+	border-radius: 5px;
+	background: #ccc;
+	background-image: url(./image/right_arrow.png);
+	background-repeat: no-repeat;
+	background-position: 0 0;
+	cursor: pointer;
+}
+
+.share-bar .button-left:hover {
+	background: #e2534b;
 	background-image: url(./image/left_arrow.png);
 	background-repeat: no-repeat;
 	background-position: 0 0;
 }
 
-.button-right {
-	margin-left: 20px;
+.share-bar .button-right:hover {
+	background: #e2534b;
 	background-image: url(./image/right_arrow.png);
 	background-repeat: no-repeat;
 	background-position: 0 0;
