--- a/src/components/feature-item/feature-item.css
+++ b/src/components/feature-item/feature-item.css
@@ -1,14 +1,14 @@
 .feature-item {
 	padding: 0;
-	margin: 30px; /* used just for example in ui-kit.vue */
-	width: 270px;
-	background-color: #f8f8f8;
+	margin-right: 30px;
 	display: inline-block;
 	vertical-align: top;
+	width: 270px;
+	height: 340px;
+	background-color: #f8f8f8;
 	border-bottom: solid 4px #e5e6e6;
 	text-align: center;
 	border-radius: 5px;
-	height: 340px;
 }
 
 .feature-item-content {
@@ -16,7 +16,7 @@
 	height: 260px;
 }
 
-.feature-item-content span {
+.feature-item-content > .feature-item-description {
 	display: inline-block;
 	font-family: 'Open Sans', sans-serif;
 	font-size: 13px;
@@ -25,15 +25,24 @@
 	line-height: 21px;
 }
 
-.feature-item-content h4 {
+.feature-item-content > .feature-item-heading {
 	font-weight: 800;
 	font-size: 16px;
 	text-transform: uppercase;
 	line-height: 19px;
-	margin-top: 10px;
 }
 
 .button-control {
 	font-family: inherit;
 	font-weight: 600;
+}
+
+.feature-item .image-content {
+	margin: 0 0 15px;
+	display: inline-block;
+	vertical-align: middle;
+	width: inherit;
+	height: auto;
+	transform: translateY(+50%);
+	overflow: inherit;
 }
