--- a/src/components/input-email/input-email.css
+++ b/src/components/input-email/input-email.css
@@ -5,7 +5,6 @@
 	width: 470px;
 	height: 40px;
 	border-radius: 4px;
-	border-left: 3px solid #d9dada;
-	border-top: 2px solid #d9dada;
-	outline: none;
+	box-shadow: inset 3px 2px 0 0 #d9dada;
+	border-style: none;
 }
