--- a/src/components/input-text/input-text.css
+++ b/src/components/input-text/input-text.css
@@ -4,14 +4,7 @@
 	color: #879393;
 	width: 470px;
 	height: 40px;
-	border-left: 3px solid #d9dada;
-	border-top: 2px solid #d9dada;
+	box-shadow: inset 3px 2px 0 0 #d9dada;
+	border-style: none;
 	border-radius: 4px;
-	outline: none;
 }
-
-
-/*.input-text::after {
-	content: "";
-	margin-right: 30px;
-}*/
