Fixed background top-bar

--- a/src/components/top-bar/top-bar.css
+++ b/src/components/top-bar/top-bar.css
@@ -1,15 +1,38 @@
-.top-bar {
-	overflow: hidden;
-	height: 95px;
-	width: 100%;
-	position: relative;
-	background-image: url(./bg-top-bar.png);
-	background-repeat: no-repeat;
-	margin-bottom: 30px;
-}
-
-.breadcrumbs {
-	position: absolute;
-	right: 0;
-	top: -20px;
-}
+	    .top-bar {
+	        margin-top: -25px;
+	        height: 95px;
+	        width: auto;
+	        position: relative;
+	        background-color: #ececec;
+	        margin-bottom: 50px;
+	    }
+	    
+	    .top-bar .content-wrapper {
+	        position: relative;
+	        margin-bottom: 15px;
+	        right: 0;
+	        padding-top: 15px;
+	    }
+	    
+	    .top-bar .content-wrapper:before {
+	        position: relative;
+	    }
+	    
+	    .top-bar .content-wrapper:after {
+	        content: "";
+	        width: 0;
+	        height: 0;
+	        position: relative;
+	        display: block;
+	        margin-left: -25px;
+	        top: 15px;
+	        border-left: 25px solid transparent;
+	        border-right: 25px solid transparent;
+	        border-top: 25px solid #ececec;
+	    }
+	    
+	    .top-bar .breadcrumbs {
+	        position: absolute;
+	        right: 0;
+	        top: 20px;
+	    }
