--- a/src/components/content-wrapper/content-wrapper.css
+++ b/src/components/content-wrapper/content-wrapper.css
@@ -1,5 +1,11 @@
 .content-wrapper {
-	width: 1170px;
+	max-width: 1170px;
 	margin: auto;
 	position: relative;
+}
+
+@media (max-width:12 00px) {
+	.content-wrapper {
+		width: 90%;
+	}
 }
