responsive blog-page, but without blog-side-bar

--- a/src/components/blog-post-header/blog-post-header.css
+++ b/src/components/blog-post-header/blog-post-header.css
@@ -3,6 +3,7 @@
 	max-width: 900px;
 	min-height: 70px;
 	margin-bottom: 40px;
+	margin-top: 40px;
 }
 
 .blog-post-header div {
@@ -15,10 +16,23 @@
 	max-width: 800px;
 }
 
+@media (max-width: 850px) {
+	.blog-post-header .blog-title {
+		margin-left: -20px;
+	}
+}
+
 .blog-post-header .datum-header {
 	margin-left: 100px;
 	margin-top: 10px;
 	margin-right: 5px;
+}
+
+@media (max-width: 850px) {
+	.blog-post-header .datum-header {
+		display: block;
+		margin-left: 0;
+	}
 }
 
 .blog-post-header .category::before {
@@ -35,4 +49,10 @@
 
 .blog-post-header a {
 	text-decoration: none;
+}
+
+@media (max-width: 850px) {
+	.blog-post-header .category::before {
+		margin-left: 0;
+	}
 }
